--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,37 @@
 anyio==4.3.0
 blinker==1.7.0
+cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.3
+google-api-core==2.19.0
+google-api-python-client==2.127.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.63.0
 h11==0.14.0
 httpcore==1.0.5
+httplib2==0.22.0
 httpx==0.27.0
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+oauthlib==3.2.2
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pygsheets==2.0.6
+pyparsing==3.1.2
 pyTelegramBotAPI==4.17.0
 python-telegram-bot==21.0.1
 requests==2.31.0
+requests-oauthlib==2.0.0
+rsa==4.9
 sniffio==1.3.1
+uritemplate==4.1.1
 urllib3==2.2.1
 Werkzeug==3.0.2
